--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
+    "express-handler": "^0.2.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
