--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,7 +7,8 @@
     "esModuleInterop": true, // Recommended for compatibility
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "typeRoots": ["./types", "./node_modules/@types"]
   },
   "include": ["src/**/*.ts"]
 }
