--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,7 +8,8 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "typeRoots": ["./types", "./node_modules/@types"]
+    "typeRoots": ["./src/types", "./src/interfaces", "./node_modules/@types"],
+    "types": ["node", "express"]
   },
   "include": ["src/**/*.ts"]
 }
